--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,3 +1,4 @@
 body{
   background-color: antiquewhite;
 }
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td,img {padding:0;margin:0;}
